left panel progress, alignment correct

--- a/src/styles/layout.css
+++ b/src/styles/layout.css
@@ -1,15 +1,54 @@
-@import url('https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300;700&display=swap');
-html {
-    background-color: #000000;
-}
-
-body {
-    color: #daa566;
-}
-
-.left-panel {
-    background-color: #000000;
-    color: #daa566;
-    border: 1px solid #daa566;
-    height: 500px;
-}
+    @import url('https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300;700&display=swap');
+    html {
+        background-color: #000000;
+    }
+    
+    body {
+        color: #daa566;
+    }
+    
+    .left-panel {
+        background-color: #000000;
+        color: #daa566;
+        border: 1px solid #daa566;
+        border-radius: 0%;
+        height: 500px;
+        width: 350px;
+        overflow: hidden;
+        word-break: break-all;
+        word-wrap: break-word;
+        overflow-wrap: break-word;
+        -webkit-hyphens: auto;
+        -moz-hyphens: auto;
+        -ms-hyphens: auto;
+        hyphens: auto;
+    }
+    
+    .face-panel {
+        /* float: left; */
+        /* top: ;
+        left: ; */
+        bottom: 10;
+        background-color: #000000;
+        color: #daa566;
+        border: 1px solid #daa566;
+        border-radius: 0%;
+        margin: -20px;
+        margin-top: 100px;
+        position: absolute;
+        height: 250px;
+        width: 200px;
+    }
+    
+    .face {
+        -webkit-animation: fadein 2s;
+    }
+    
+    @keyframes fadein {
+        from {
+            opacity: 0;
+        }
+        to {
+            opacity: 1;
+        }
+    }
